Add features section

--- a/css/style.css
+++ b/css/style.css
@@ -106,4 +106,46 @@ body {
   margin-top: 150px;
 }
 
+.features {
+  margin-top: 1100px;
+}
+
+.headphone {
+  margin-left: -140px;
+  width: 648px;
+  height: 371px;
+  position: absolute;
+  margin-top: 10px;
+  float: left;
+/*  padding-right: 100px;*/
+}
+
+
+.text {
+  color: rgb(255, 255, 255) ;
+}
+
+.features-title {
+  margin-top: 100px;
+}
+
+.row > p {
+  width: 500px;
+  margin-top: 20px;
+  color: rgb(102, 119, 142);
+  font-size: 14px;
+  width: 560px;
+  height: 119px;
+  line-height: 2.571;
+}
+
+.features-button {
+  color: rgb(255, 255, 255);
+  margin-top: 50px;
+  margin-right: 335px;
+}
+
+
+
+
 
