--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
   background-color: Transparent;
   width: 194px;
   height: 54px;
+  color: rgb(255, 255, 255);
 }
 
 .clear-button:hover {
@@ -248,4 +249,27 @@ body {
 .carousel {
   width: 1500px;
   margin-left: -185px;
+}
+
+.download {
+  margin-top: 100px;
+}
+
+.download-text {
+  margin-top: 50px;
+  line-height: 2.5;
+}
+
+.move-up {
+  margin-top: -125px;
+}
+
+.move-up-more {
+  margin-top: -325px;
+}
+
+.line {
+  opacity: 0.349;
+  height: .5px;
+  color: rgb(21, 59, 109);
 }
