--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 #main-bg{
 	width: 100%;
-	height: 6000px;
+	height: 100%;
 	background: url('../images/Layer-5.png') no-repeat;
 	position: relative;
   z-index: 1;
@@ -28,7 +28,7 @@ body {
   font-size: 14px;
   font-weight: bold;
   border-style: solid;
-  line-height: 2.5;
+  line-height: 2.6;
   border-width: 2px;
   border-radius: 25px;
   border-color: rgb(21, 59, 109);
@@ -190,7 +190,7 @@ body {
   text-align: center;
 }
 
-.header {
+.header-other {
   margin: 50px 0;
   color: rgb(255, 255, 255);
 }
@@ -280,7 +280,9 @@ footer {
   color: rgb(20, 57, 106);
 }
 
-
+.header {
+  margin-top: 200px;
+}
 
 
 
