--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,15 @@ hr.small {
   right: 5px;
 }
 
+body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 #main-bg{
 	width: 100%;
 	height: 100%;
@@ -324,7 +333,7 @@ body {
 
 .multi-screens {
   width: 700px;
-  margin-right: -150px;
+  margin-right: -125px;
   margin-top: -150px;
 }
 
